sumo/tests/traci/VariableRetrieval/Simulation/errors/testsuite.traci
# Tests what happens if one asks for an unsupported variable
UnsupportedVariable

